# Calendar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  downloader.rs  error.rs  exif.rs  filename.rs  fileops.rs  lib.rs  main.rs  validator.rs
