[package]
name = "calendar"
version = "0.1.0"
edition = "2021"
authors = ["Calendar Downloader"]
description = "A batch image downloader with EXIF and file timestamp modification"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
filetime = "0.2"
futures = "0.3"
indicatif = "0.17"
regex = "1"
little_exif = "0.6.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
little_exif = "0.6.3"
